welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: value update is not a member of java.awt.Color
getCouleurSol() = x
^SlugTracking:4: error: not found: value If
If (x == color.green) {avance()}
^