welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
getCouleurSol() = x
If (x == color.green) {avance()}



}        
